--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./assets/1600w-ww1u6OsW_3o.webp" />
-    <title>Document</title>
+    <title>Cafe Street</title>
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
@@ -17,9 +17,9 @@
             </div>
             <div class="navbar__content">
               <ul class="navbar__collection">
-                <a href=""> <li>About us</li></a>
-                <a href=""> <li>Our Product</li></a>
-                <a href=""> <li>Delivery</li></a>
+                <a class="about" href=""> <li>About us</li></a>
+                <a class="our" href=""> <li>Our Product</li></a>
+                <a class="Delivery" href=""> <li>Delivery</li></a>
               </ul>
             </div>
             <div class="navbat__search">
@@ -69,15 +69,113 @@
       </section>
     </header>
     <main class="main">
+      <section class="popular">
+        <div class="container">
+          <div class="popular__wrapper">
+            <div class="popular__suptitle">
+              <p>Popular Now</p>
+            </div>
+            <div class="popular__block">
+              <div class="popular__card">
+                <div class="popular__img">
+                  <img src="./assets/img_product.png" alt="" />
+                </div>
+                <div class="popular__text">
+                  <div class="popular__context">
+                    <p>Vanilla Latte</p>
+                    <p>21 K</p>
+                  </div>
+                  <div class="popular__btn">
+                    <div class="popular__button">
+                      <button>Hot</button>
+                      <button>Cold</button>
+                    </div>
+                    <div class="populaar__icon">
+                      <button>
+                        <img
+                          src="./assets/shopping-cart-add_3916604.svg"
+                          alt=""
+                        />
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="popular__card">
+                <div class="popular__img">
+                  <img src="./assets/img_product.png" alt="" />
+                </div>
+                <div class="popular__text">
+                  <div class="popular__context">
+                    <p>Vanilla Latte</p>
+                    <p>21 K</p>
+                  </div>
+                  <div class="popular__btn">
+                    <div class="popular__button">
+                      <button>Hot</button>
+                      <button>Cold</button>
+                    </div>
+                    <div class="populaar__icon">
+                      <button>
+                        <img
+                          src="./assets/shopping-cart-add_3916604.svg"
+                          alt=""
+                        />
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+                <div class="popular__card">
+                    <div class="popular__img">
+                    <img src="./assets/img_product.png" alt="" />
+                    </div>
+                    <div class="popular__text">
+                    <div class="popular__context">
+                        <p>Vanilla Latte</p>
+                        <p>21 K</p>
+                    </div>
+                    <div class="popular__btn">
+                        <div class="popular__button">
+                        <button>Hot</button>
+                        <button>Cold</button>
+                        </div>
+                        <div class="populaar__icon">
+                        <button>
+                            <img
+                            src="./assets/shopping-cart-add_3916604.svg"
+                            alt=""
+                            />
+                        </button>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="hero">
         <div class="container">
           <div class="hero__wrapper">
-            <div class="hero__text"></div>
-            <div class="hero__img"></div>
+
           </div>
         </div>
       </section>
     </main>
+    <footer class="footer">
+<section class="subcribe">
+    <div class="container">
+        <p>Subscribe to get 50% discount price</p>
+        <div class="footer__search">
+            <form action="">
+                <input type="text">
+                <button type="submit">Order now</button>
+            </form>
+        </div>
+    </div>
+</section>
+    </footer>
     <script src="./js/main.js"></script>
   </body>
 </html>
