--- a/index.html
+++ b/index.html
@@ -157,9 +157,7 @@
       </section>
       <section class="hero">
         <div class="container">
-          <div class="hero__wrapper">
-
-          </div>
+            <div class="hero__wrapper"></div>
         </div>
       </section>
     </main>
@@ -169,7 +167,7 @@
         <p>Subscribe to get 50% discount price</p>
         <div class="footer__search">
             <form action="">
-                <input type="text">
+                <input placeholder="    Email address" type="text">
                 <button type="submit">Order now</button>
             </form>
         </div>
